projects/django/deployments/istio/django-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: django-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway # Use the Istio gateway as the selector
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
