projects/django/deployments/istio/django-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: django-virtual-service
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - django-gateway # Reference the gateway created earlier
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: django-service.dev.svc.cluster.local # Adjust the service name accordingly
        port:
          number: 8000
